# dgraph-tonic

./: .travis.yml  Cargo.toml  README.md  build.rs  docker-compose-1-1.yaml  docker-compose-1-2.yaml  docker-compose-20-03-acl.yaml  docker-compose-20-03.yaml  docker-compose-21-03-acl.yaml  docker-compose-21-03.yaml
examples/my_txn/: .gitignore  Cargo.toml  README.md
examples/my_txn/src/: main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
examples/tls/: .gitignore  Cargo.toml  README.md
examples/tls/src/: main.rs
proto/: api_v1.0.x.proto  api_v1.1.x.proto  api_v21.03.0.proto
src/: client.rs  lib.rs  mutation.rs  response.rs  stream.rs  stub.rs
src/api/: mod.rs  mutation.rs  response.rs  txn_context.rs
src/api/v1_0_x/: api.rs  mod.rs
src/api/v1_1_x/: api.rs  mod.rs
src/api/v21_03_0/: api.rs  mod.rs
src/async_client/: mod.rs
src/async_client/txn/: best_effort.rs  default.rs  mod.rs  mutated.rs  read_only.rs
src/client/: acl.rs  default.rs  endpoints.rs  lazy.rs  mod.rs  slash_ql.rs  tls.rs
src/errors/: client.rs  dgraph.rs  mod.rs
src/sync/: iterator.rs  mod.rs
src/sync/client/: acl.rs  default.rs  mod.rs  slash_ql.rs  tls.rs
src/sync/txn/: best_effort.rs  default.rs  mod.rs  mutated.rs  read_only.rs
src/sync_client/: mod.rs
src/sync_client/txn/: best_effort.rs  default.rs  mod.rs  mutated.rs  read_only.rs
src/txn/: best_effort.rs  default.rs  mod.rs  mutated.rs  read_only.rs
tests/resources/: hmac-secret
