[package]
name = "dgraph-tonic"
version = "0.8.3"
authors = ["Selmeci <selmeci.roman@gmail.com>"]
edition = "2018"
description = "A rust async/sync client for Dgraph database build with Tonic crate"
readme = "README.md"
license = "MIT"
keywords = ["dgraph", "grpc", "async", "sync"]
repository = "https://github.com/selmeci/dgraph-tonic"
homepage = "https://github.com/selmeci/dgraph-tonic"
exclude = [
    "build.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.2"
async-trait = "0.1"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
prost = "0.6"
rand = "0.7"
rustls = {version = "0.18", features = ["dangerous_configuration"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
tonic = {version = "0.3", features = ["tls","transport"]}
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
webpki = {vesion = "0.21"}

[build-dependencies]
tonic-build = "0.2"


[features]
default = ["dgraph-1-1"]
all = ["acl", "default", "tls", "sync", "experimental", "slash-ql"]
acl = []
dgraph-1-0 = []
dgraph-1-1 = []
slash-ql = ["tls"]
sync = []
tls = []
experimental = []