[package]
name = "dgraph-tonic"
version = "0.10.6"
authors = ["Selmeci <selmeci.roman@gmail.com>"]
edition = "2018"
description = "A rust async/sync client for Dgraph database build with Tonic crate"
readme = "README.md"
license = "MIT"
keywords = ["dgraph", "grpc", "async", "sync"]
repository = "https://github.com/selmeci/dgraph-tonic"
homepage = "https://github.com/selmeci/dgraph-tonic"
exclude = [
    "build.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
http = "0.2"
hyper = "0.14"
hyper-rustls = { version = "0.23", features = ["http1", "http2", "webpki-tokio","tls12"] }
lazy_static = "1.4"
prost = "0.11"
rand = "0.8"
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8", features = ["tls-webpki-roots"] }
tower = { version = "0.4" }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
webpki = { version = "0.22", optional = true }

[build-dependencies]
tonic-build = "0.8"


[features]
default = ["dgraph-1-1"]
all = ["acl", "default", "tls", "sync", "experimental", "slash-ql"]
acl = []
dgraph-1-0 = []
dgraph-1-1 = []
dgraph-21-03 = []
slash-ql = ["tls", "tokio-rustls", "webpki"]
sync = []
tls = []
experimental = []
