[package]
name = "simple"
version = "0.1.0"
authors = ["Selmeci <selmeci.roman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dgraph-tonic = {path = "../../"}
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }